# edef

./: pyproject.toml
src/edef/: __init__.py
src/edef/eobject/: boundary.py  dem.py  georaster.py  images.py
src/edef/eobject/sats/: pleiades.py  satellites.py
src/edef/eobject/utils/: asp.py  gdal_utils.py
