[project]
name = "edef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeoLetellier", email = "leo.letellier.6@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.2.0",
    "docopt>=0.6.2",
    "gdal>=3.10.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pystac>=1.12.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "typer>=0.15.2",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
